# limrun-chat

./: .bazelrc  .env.example  .gitignore  AGENTS.md  MODULE.bazel  README.md  skills-lock.json
.agents/skills/limrun-ios-simulator/: SKILL.md
.agents/skills/limrun-xcode-bazel/: SKILL.md
.agents/skills/limrun-xcode-bazel/references/: project-compatibility.md  verify-remote.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ios-preview.yml
.ona/: automations.yaml
App/: BUILD.bazel  Info.plist
App/Resources/: LaunchScreen.storyboard
App/Resources/Assets.xcassets/bgComposer.colorset/: Contents.json
App/Resources/Assets.xcassets/separator.colorset/: Contents.json
App/Resources/Assets.xcassets/textPrimary.colorset/: Contents.json
App/Resources/Assets.xcassets/textSecondary.colorset/: Contents.json
App/Sources/: AppMain.swift  ContentView.swift
App/Sources/Chat/: AppearanceMode.swift  ChatView.swift  ChatViewModel.swift  Composer.swift  DS.swift  FakeAssistant.swift  Message.swift  MessageBubble.swift  SuggestionBar.swift  Theme.swift  TypingIndicator.swift
